testimonial placeholder image added and alignment issue updated

--- a/assets/scss/elements/testimonial.scss
+++ b/assets/scss/elements/testimonial.scss
@@ -45,11 +45,11 @@
 		background:transparent;
 		.wk-card-media-top{
 			padding-bottom:30px;
-			img{width:15%;padding:3px;}
+			img{width:15%;padding:3px; display:inline-block;}
 		}
 		.wk-card-media-bottom{
 			padding-bottom:20px;
-			img{width:15%;padding:3px;}
+			img{width:15%;padding:3px; display:inline-block;}
 		}
 		.wk-card-body{
 			.wk-text-meta.right{
@@ -62,7 +62,7 @@
 		background:transparent;
 		.wk-card-media-top{
 			padding-bottom:30px;
-			img{width:15%;padding:3px;}
+			img{width:15%;padding:3px; display:inline-block;}
 		}
 		.wk-card-media-bottom{
 			padding-bottom:20px;
@@ -121,7 +121,7 @@
 		}
 		.wk-card-media-bottom{
 			padding-bottom:20px;
-			img{width:15%;padding:3px;}
+			img{width:15%;padding:3px; display:inline-block;}
 		}
 		.wk-card-body{
 			.quote {
